# rocannon

./: .gitignore  .mcp.json  .mcp.json.example  .mcphost.yml.example  .pre-commit-config.yaml  AGENT.md  AGENTS.md  ARCHITECTURE.md  DEMOS.md  Dockerfile  LICENSE  NOTICE  README.md  cliff.toml  pyproject.toml  vulture_whitelist.py
.github/workflows/: ci.yml  pages.yml  release.yml
deploy/: rocannon.service
dev/: AGENT.md  ARCHITECTURE.md  README.md  mcphost_test.sh
dev/inventories/: csrt.yml  demo.yml  vsi.yml
dev/inventories/host_vars/: vsi01.yml
dev/profiles/: wazi-slim.yml  wazi.yml  zos-demo.yml  zos.yml
dev/tests/: conftest.py  interactive.py  test_llm.py
dev/tests/containers/: Containerfile.rhel  Containerfile.ubuntu
dev/three_cannon_demo/: run.py  setup.sh  teardown.sh
docs/: architecture.html  cli.html  clients.html  comparison.html  index.html  profiles.html  quickstart.html
docs/assets/: demo-agent.cast  demo-ceos.cast  demo.cast
docs/recording/: README.md  demo-agent.sh  demo-ceos.sh  demo.sh  setup-demo-env.sh
docs/reports/: AGENT_TEST_REPORT.md  DEMO_SCENARIOS.md  RUNWAY_VALIDATION_REPORT.md  USE_CASES_REPORT.md
docs/site/: architecture.html  cli.html  clients.html  comparison.html  ecosystem.html  index.html  mainframes.html  profiles.html  quickstart.html
examples/: README.md
examples/case-study/: README.md  agent_demo.py  run.sh
examples/clients/: README.md  claude-desktop.json  cursor.json  ibm-bob.json  mcphost.json
examples/containerlab/: README.md  agent_demo.py  ceos-inventory.yml  ceos-profile.yml  ceos.clab.yml
examples/execution-environment/: README.md  agent_demo.py  execution-environment.yml  profile-agent.yml  profile.yml
examples/inventories/: podman.yml
examples/profiles/: demo-builtin.yml  demo-crypto.yml  demo-docker.yml  demo-mongodb.yml  demo-mysql.yml  demo-postgres.yml  demo-rabbitmq.yml  demo-sysadmin.yml  local-dev.yml
examples/quickstart/: profile.yml
inventories/: podman.yml
profiles/: demo-builtin.yml  demo-crypto.yml  demo-docker.yml  demo-mongodb.yml  demo-mysql.yml  demo-postgres.yml  demo-rabbitmq.yml  demo-sysadmin.yml  local-dev.yml  wazi-full.yml  wazi-slim.yml  zos-demo.yml  zos.yml
scratch/: Containerfile.rhel  Containerfile.sles  agent_test.py  deadlock_probe.py  demo_scenarios.py  harness.py  inventory.yml  mcp_smoke.py  profile_test.yml  run_campaign.py  use_cases.py
scratch/research/: LANDSCAPE.md
scratch/results/: agent.jsonl  collection_counts.json  deadlock_probe.json  mcp_smoke.json  results.jsonl  use_cases.jsonl
scratch/results/demo_transcripts/: 1_incident.md  2_drift.md  3_hardening.md  4_stack.md  5_audit.md
src/rocannon/: ansible.py  cli.py  config.py  correlation.py  executor.py  history.py  inventory.py  playbook.py  profiles.py  redaction.py  repl.py  schema.py  server.py
src/rocannon/cannons/: __init__.py  ansible.py  helm.py  terraform.py
tests/: check.sh  conftest.py  interactive.py  test_ansible_integration.py  test_cannons_integration.py  test_collections.py  test_llm.py  test_roles_integration.py  test_server.py  test_unit.py
tests/containers/: Containerfile  Containerfile.sles
