[project]
name = "rocannon"
version = "0.3.0"
description = "Ansible modules as MCP tools"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Adam Munawar Rahman", email = "msrahmanadam@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["ansible", "mcp", "model-context-protocol", "automation", "infrastructure", "zos", "ibm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "ansible-core>=2.19.7",
    "ansible-runner>=2.4.2",
    "click>=8.1.0",
    "fastmcp>=3.1.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
# Install with: pip install rocannon[otel]
# Then run: OTEL_SERVICE_NAME=rocannon opentelemetry-instrument rocannon serve ...
otel = [
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-exporter-otlp>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/msradam/rocannon"
Repository = "https://github.com/msradam/rocannon"
Issues = "https://github.com/msradam/rocannon/issues"

[project.scripts]
rocannon = "rocannon.cli:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "opentelemetry-sdk>=1.26.0",
    "ollama>=0.6.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.15.5",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

# --- Ruff ---
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "S", "FURB"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S108", "S110", "S310", "S603", "S607"]
"src/rocannon/schema.py" = ["S603", "S607"]
"src/rocannon/inventory.py" = ["S603"]

[tool.ruff.format]
quote-style = "double"

# --- Mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_reexport = true
mypy_path = "src"
