[project]
name = "rocannon"
version = "0.1.4"
description = "Every Ansible module as a typed MCP tool"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Adam Munawar Rahman", email = "msrahmanadam@gmail.com" }
]
requires-python = ">=3.12"
keywords = [
    "ansible",
    "mcp",
    "model-context-protocol",
    "llm",
    "ai-agents",
    "devops",
    "automation",
    "infrastructure-as-code",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]

# rocannon reflects Ansible's module schema, so ansible-core and ansible-runner
# are core dependencies. rocannon never imports ansible-core (GPL-3.0): it uses
# the ansible-doc/ansible-inventory CLIs via subprocess and ansible-runner
# (Apache-2.0) as a library.
dependencies = [
    "ansible-core>=2.21.0",
    "ansible-runner>=2.4.3",
    "fastmcp>=3.4.2",
    "prompt_toolkit>=3.0.52",
    "typer>=0.26.7",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
# --- AI ---
# `pip install 'rocannon[ai]'` enables `.ai` mode in the REPL. Backend is
# picked per-call via ROCANNON_AI_MODEL (e.g. "anthropic/claude-sonnet-4-5",
# "openai/gpt-4o", "ollama/llama3.1", "watsonx/<model>"). LiteLLM owns the
# provider matrix; rocannon stays unopinionated about it.
ai = [
    "litellm>=1.89.0",
]

# --- Observability ---
# `pip install 'rocannon[otel]'`; run under `opentelemetry-instrument rocannon mcp serve …`
otel = [
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
]

# --- Meta ---
# `pip install 'rocannon[all]'`, every optional feature (Ansible is already core).
all = [
    "litellm>=1.89.0",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
]

[project.urls]
Homepage = "https://github.com/msradam/rocannon"
Repository = "https://github.com/msradam/rocannon"
Issues = "https://github.com/msradam/rocannon/issues"

[project.scripts]
rocannon = "rocannon.cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
# `uv sync` installs these alongside the project. ansible-core and ansible-runner
# come from the core dependencies.
dev = [
    "litellm>=1.89.0",
    "mypy>=2.1.0",
    "opentelemetry-sdk>=1.42.1",
    "ollama>=0.6.2",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "types-pyyaml>=6.0.12.20260518",
    "vulture>=2.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Collect only the tracked suite by default. dev/tests/ holds local LLM evals
# that hit a real model; running them is opt-in via an explicit path.
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that touch real docker/ansible. Opt-in via `pytest -m integration`.",
]
# Default: run unit tests, skip integration. Override with `pytest -m integration`.
addopts = "-m 'not integration'"

[tool.coverage.run]
branch = true
source = ["src/rocannon"]
omit = ["src/rocannon/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

# --- Ruff ---
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "S", "FURB"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S108", "S110", "S310", "S603", "S607"]
"src/rocannon/schema.py" = ["S603", "S607"]
"src/rocannon/inventory.py" = ["S603"]
"src/rocannon/cli.py" = ["S603", "S607"]

[tool.ruff.format]
quote-style = "double"

# --- Vulture ---
# 80 is vulture's recommended floor; below it, decorator-registered functions
# (@mcp.tool, @app.command, pydantic validators) read as false positives.
[tool.vulture]
min_confidence = 80

# --- Refurb ---
# Adopted: FURB123 (.copy()), FURB173 (dict |), FURB144 (pathlib), FURB109 (tuple).
# Declined, with reasons:
# FURB143: `x or default` is an intentional guard on str|None ansible-doc values;
#          removing it reintroduces None.
# FURB138: false positive on loops that `try/except: continue` (load_all_playbooks).
# FURB115: `x == []` is a stronger assertion than `not x` in tests (exact value).
# FURB113: `extend((...))` reads worse than consecutive appends for multi-line strings.
# FURB118: an explicit `lambda` is clearer than importing operator.itemgetter.
# FURB184: explicit intermediate variables read better than fluid call chains.
[tool.refurb]
ignore = [143, 138, 115, 113, 118, 184]

# --- Mypy ---
[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_reexport = true
mypy_path = "src"

# Third-party libs without bundled type stubs. ansible_runner ships
# partial stubs only.
[[tool.mypy.overrides]]
module = ["ansible_runner.*"]
ignore_missing_imports = true
